# polarizer

./: .dockerignore  .env.example  .gitignore  CONTRACT.md  Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  health.rs  main.rs  redis_stream.rs  telemetry.rs
src/pipeline/: download.rs  hasher.rs  inference.rs  mod.rs
