[package]
name = "polarizer"
version = "0.1.0"
edition = "2024"
description = "High-performance image analysis microservice with ONNX inference and perceptual hashing"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Redis client with async support
redis = { version = "0.29", features = ["tokio-comp", "streams", "connection-manager"] }

# HTTP client for image downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Image processing & perceptual hashing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
image_hasher = "2"

# ONNX Runtime inference
ort = "2.0.0-rc.12"
ndarray = "0.17"

# Configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Hostname detection
hostname = "0.4"

# Health check / metrics HTTP server
axum = "0.8"

# Graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
